fix: abort when Thread.sleep(1000) for +1s, also